[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "noWord"
dynamic = ["version", "description"]
authors = [
  { name="Matthias Mueller", email="mmuellersk@gmail.com" },
]

[tool.hatch.version]
path = "noWord/__init__.py"

[tool.hatch.metadata]
description = { path = "noWord/__init__.py", key = "__description__" }

readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GNU"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/mmuellersk/noWord"
Issues = "https://github.com/mmuellersk/noWord/issues"